# ZedfestModdingKit

./: .gitignore  .justfile  .pre-commit-config.yaml  .tempo.json  KevinSpel.uproject  README.md  mkdocs.yml  open_uproject.py  pyproject.toml
.github/workflows/: example_map_release.yml  generate_mod_releases.yml  github_pages.yml  make_mod_releases.yml
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
Content/AI_System/Blueprints/: BP_NPC_Base.uasset  BP_PatrolRoute.uasset
Content/Animations/: ABP_Main.uasset
Content/Blueprints/: BP_Hissdoors1.uasset  BP_Store.uasset  BP_StoreSpawnPoint.uasset
Content/Blueprints/ATM/: BP_ATM.uasset  BP_GunPawnShop.uasset
Content/Blueprints/Objective_Stuff/: BP_ObjectivePickup_SpawnPoint.uasset  BP_ObjectivePlaced_SpawnPoint.uasset
Content/Blueprints/SirenWarning/: BP_SirenWarning.uasset
Content/Collections/: NewCollection2.collection
Content/Geometry/Meshes/: 1M_Cube.uasset  1M_Cube_Chamfer.uasset  (+2 more)
Content/Splash/: EdSplash.uasset
Content/ThirdPersonBP/: ThirdPersonOverview.uasset
Modding/scripts/: add_mod.bat  clean_full.bat  refresh_deps.bat  run_engine.bat  run_game.bat  setup.bat  test_mods_all.bat
Plugins/AdvancedSessions/: AdvancedSessions.uplugin
Plugins/AdvancedSteamSessions/: AdvancedSteamSessions.uplugin
Plugins/ToDoList/: ToDoList.uplugin
Source/: KevinSpel.Target.cs  KevinSpelEditor.Target.cs
Source/KevinSpel/: KevinSpel.Build.cs  KevinSpel.cpp  KevinSpelGameModeBase.cpp  KevinSpelGameModeBase.h  UAM_BPFL.cpp  UAM_BPFL.h
docs/: index.md
docs/stylesheets/: extra.css
(+889 files in other folders)
